# bmad-web-hub

./: .gitignore
.claude/: settings.json
_bmad/_config/: bmad-help.csv  files-manifest.csv  manifest.yaml  skill-manifest.csv
_bmad/_config/ides/: claude-code.yaml
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/cis/: config.yaml
_bmad/core/: config.yaml
_bmad/gds/: config.yaml
_bmad/tea/: config.yaml
_bmad/wds/: config.yaml
backend/: .env  pyproject.toml
backend/app/: config.py  db.py  main.py  models.py
backend/app/routes/: outputs.py  sessions.py  skills.py  ws.py
backend/app/services/: api_runner.py  claude_runner.py  session_store.py  skill_catalog.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  types.ts
frontend/src/components/: ChatInput.tsx  ChatMessage.tsx  ErrorBoundary.tsx  Layout.tsx  MessageList.tsx  SkillPicker.tsx  StreamingText.tsx
frontend/src/hooks/: useLang.ts  useSessions.ts  useSkills.ts  useWebSocket.ts
frontend/src/pages/: Dashboard.tsx  OutputViewer.tsx  SessionView.tsx
